# MLLibrary

./: DOCUMENTATION.md  MLLibrary.cabal  MLLibrary.hs  Main.hs  Mllibrary.hs  README.md  package.yaml  stack.yaml
.github/workflows/: haskell.yml
.stack-work/: stack.sqlite3
.stack-work/install/x86_64-linux-tinfo6-libc6-pre232/5b1f75cef313fdbbea68cea0c4a6365e95b7451b9c153b1ebd62fd43fb817600/9.2.8/pkgdb/: MLLibrary-0.1.0.0-Fva2hfWeAzELL3oXZnOc9p.conf  package.cache
.stack-work/install/x86_64-linux-tinfo6-libc6-pre232/bba7ce53fb55fb8e5bab3008f3b11ecaae21342243d78b32f66b04b58b7d502c/9.2.8/pkgdb/: MLLibrary-0.1.0.0-Fva2hfWeAzELL3oXZnOc9p.conf  package.cache
app/: Main.hs
main.hs/: .gitignore  MLLibrary.cabal  stack.yaml
main.hs/.stack-work/: stack.sqlite3
main.hs/Examples/: Examples.hs
main.hs/Main/: Main.hs
main.hs/Mllibrary/: Mllibrary.hs
src/: Mllibrary.hs
