name:                MLLibrary
version:             0.1.0.0
build-type:          Simple
cabal-version:       2.0

library
  exposed-modules:     Mllibrary
  hs-source-dirs:      Mllibrary
  build-depends:       base >= 4.7 && < 5
                    , hmatrix == 0.20.*
                    , random == 1.2.*
  default-language:    Haskell2010
  default-extensions:  FlexibleContexts
                    , MultiParamTypeClasses
                    , ScopedTypeVariables

executable mlexample
  hs-source-dirs:      Examples
  main-is:             Examples.hs
  build-depends:       base >= 4.7 && < 5
                    , hmatrix == 0.20.*
                    , random == 1.2.*
                    , MLLibrary
  default-language:    Haskell2010

executable mlmain
  hs-source-dirs:      Main
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                    , hmatrix == 0.20.*
                    , random == 1.2.*
                    , MLLibrary
  default-language:    Haskell2010
